Fixed slideshow arrows, aligned text/slideshow/boxes

--- a/static/css/landing-styles.css
+++ b/static/css/landing-styles.css
@@ -1,6 +1,7 @@
 .sticky {
     position: fixed;
-    width: 100%
+    width: 100%;
+    z-index: 1;
 }
 .footer {
     bottom: 0;
@@ -20,7 +21,7 @@ a {
     flex-wrap: wrap;
 }
 .flexbox-item {
-    margin: 10px;
+    margin: 8px;
     width: 30%;
     flex: 1 1 300px;
 }
@@ -41,6 +42,10 @@ a {
 .table-item-large {
     width: 300px;
     height: 300px;
+}
+.my-slides {
+    width: 100%;
+    z-index: -1;
 }
 ul {
     padding-left: inherit;
